# AI_NAS_TO_S3_FOR_RAG_INGESTOR_TOOL

./: README.md  pyproject.toml  spec.md
nas2s3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rag_ingestinator/: __init__.py  __main__.py  audit.py  benchmark.py  checkpoint.py  cli.py  config.py  progress.py  scanner.py  uploader.py  utils.py
rag_ingestinator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
